--- a/washington-heights-dining-table/south_asian_lit/11/index.html
+++ b/washington-heights-dining-table/south_asian_lit/11/index.html
@@ -131,11 +131,11 @@
           }
           .footnotes {
               margin-top: 40px;
-              border-top: 2px solid #AE3179;
+              border-top: 2px solid #486a3f;
               padding-top: 10px;
               font-family: 'Garamond', serif;
               width: 720px;
-              color: #AE3179;
+              color: #486a3f;
           }
           .footnote {
               font-size: 18px;
@@ -146,12 +146,12 @@
 
           .footnote a {
               text-decoration: none;
-              color: #84D6DD;
+              color: #531639;
           }
           .footnote a:hover {
               text-decoration: underline;
               color: #E7EFC1;
-              text-shadow: 1.5px 1.5px #84D6DD;
+              text-shadow: 1.5px 1.5px #486a3f;
           }
     </style>
   </head>
@@ -161,11 +161,17 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <h1>Thinking about some relationships with prose as a form mentioned in class</h1>
+        <p style="margin-bottom: 20px; text-align: center"> <i>WARNING: This reckons with portrayals of sexual violence & rape</i></p>
+        <h1>Sadaat Hasan Manto: Formal invention in response to the trauma of Partition</h1>
       </div>
       <div class="essay">
-          <p class="indent", style="margin-bottom: 100px">
-              I’m writing this after I wrote about Premchand’s short and Satyajit Ray’s adaptation of it, which I think embody interesting relationships with prose (see post for February 12). There, prose is antithetical to the structured literary traditions (and associated detachment and decadence) of old. The <i>ghazal</i> is positioned as one such form. This is not at all the case in Mirza Ruswa’s <i>Umrao Jan Ada</i>. Though it is, of course, written in prose, it clearly holds <i>ghazals</i> in high regard. This represents a version of the significance prose that Anand mentioned in class. For Mirza Ruswa Sahib, its use is born out of a nostalgia for and a desire to portray the past of Lucknowi culture. Ironically, the old forms that were part of the vibrant expressive tradition in Lucknow were not equipped to paint a picture of that Lucknow. Their forms, customs, and embeddedness limited the sorts of topics that could be explored through them. A nostalgia for an artistic scene characterized by that rigidity had to be expressed in prose, a form that allows for constant invention and experimentation. You mentioned, though, that Tagore didn’t conceive of the formal liberty offered by prose as offering all the possibilities a textual artist would need. For him, meter, not prose, was the medium to process Upanishadic wisdom and express those emotions. It’s telling, perhaps, that he has Sandip say: “We, with the clubs of our prose, are the iconoclasts of meter” (57). So far we’ve seen Tagore and Premchand use prose more for the purpose of political satire and commentary, while Mirza Ruswa uses it more to portray life lived in a place and time.
+          <p class="indent">
+              In contrast with earlier works of South Asian literature, Sadaat Hasan Manto's prose really struck me. It seems like the need to process the carnal violence and trauma of partition in literature pushed the form of the short story in a direction it had not yet taken in South Asia, if anywhere. Premchand’s portrayals of rural life had a way of vividly capturing the bare, deprived subjectivities enforced on people by rigid social structures and daily toil, but none of his stories even come close to the bareness of Sadaat Hasan Manto’s “Open It.” The prose in the first of its three pages goes back and forth between descriptions of Sirajuddin’s disassociated physical experiences and fragments of recent memory as he tries, in vain, to find his daughter. The prose is just as disoriented as Sirajuddin’s experience. It is here that the prose is most detailed. By the story’s last page, when it is revealed that the social workers have Sirajuddin’s daughter but have not returned her to him, each paragraph is a single sentence. The horror of their violation of her does not need to be written. It is so revolting that it feels like Sadaat Hasan Manto is trying to articulate it in as few words as is humanly possible. His style embodies the unspeakability of the horrors of the violence. Like the writers of the PWA, his ending twists and shocks with just two sentences. For Premchand and Yashpal, those twists were usually absurd or ironic, and serve to deepen their critique. For Yashpal, the twist is plain horror. “Her father shouted with joy, ‘She is alive. My daughter is alive.’ / The doctor broke into a cold sweat.’”
           </p>
-      </div>
+            <p class="indent">
+              Whereas previous social critics in India had been blunt in their portrayals of suffering — particularly Premchand in his portrayal of the rural poor, and at times Yashpal, like in “The Right to Grief” — Sadaat Hasan Manto’s response to Partition is an even blunter form of literature. “Thanda Gosht,” for example, includes completely indelicate descriptions of a man going down on a prostitute he often sees. It is startlingly raw in contrast with earlier Indian literature (at least from what we’ve seen). At the end of the story, he confesses that he killed six people and raped a girl’s dead body. In the face of such horrors, frank descriptions of vulgar sex are nothing. The need to process these things desensitized Manto to authors' conventional avoidance of explicit portrayals of sex in all its physicality.
+            </p>
+            <p class="indent", style="margin-bottom: 100px">
+              The one and half pages of his story, "Urinal," is another example of this bluntness. They are mainly dedicated to describing — excuse my language — human shit. This story captures the inadequacy of language at dealing with a horror that is so revoltingly sensory. The narrator is comforted when the vandalized the urinal goes from the hateful “**** fucked the Pakistan of the Muslims / **** fucked the Akhand Bharat of the Hindus” to the rueful “**** fucked the Hindustan both of them” (21). But this is only momentary comfort from the palpable sensory disgust of the urinal. Only in response to truly disgusting things will a literature like this be invented. Its existence is a testament to the power of human expression to morph itself according to the shape of the world it is processing.
+            </p>
   </html>
