--- a/washington-heights-dining-table/south_asian_lit/13/index.html
+++ b/washington-heights-dining-table/south_asian_lit/13/index.html
@@ -131,11 +131,11 @@
           }
           .footnotes {
               margin-top: 40px;
-              border-top: 2px solid #AE3179;
+              border-top: 2px solid #486a3f;
               padding-top: 10px;
               font-family: 'Garamond', serif;
               width: 720px;
-              color: #AE3179;
+              color: #486a3f;
           }
           .footnote {
               font-size: 18px;
@@ -146,12 +146,12 @@
 
           .footnote a {
               text-decoration: none;
-              color: #84D6DD;
+              color: #531639;
           }
           .footnote a:hover {
               text-decoration: underline;
               color: #E7EFC1;
-              text-shadow: 1.5px 1.5px #84D6DD;
+              text-shadow: 1.5px 1.5px #486a3f;
           }
     </style>
   </head>
@@ -161,11 +161,16 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <h1>Thinking about some relationships with prose as a form mentioned in class</h1>
+        <h1>No in between</h1>
       </div>
       <div class="essay">
-          <p class="indent", style="margin-bottom: 100px">
-              I’m writing this after I wrote about Premchand’s short and Satyajit Ray’s adaptation of it, which I think embody interesting relationships with prose (see post for February 12). There, prose is antithetical to the structured literary traditions (and associated detachment and decadence) of old. The <i>ghazal</i> is positioned as one such form. This is not at all the case in Mirza Ruswa’s <i>Umrao Jan Ada</i>. Though it is, of course, written in prose, it clearly holds <i>ghazals</i> in high regard. This represents a version of the significance prose that Anand mentioned in class. For Mirza Ruswa Sahib, its use is born out of a nostalgia for and a desire to portray the past of Lucknowi culture. Ironically, the old forms that were part of the vibrant expressive tradition in Lucknow were not equipped to paint a picture of that Lucknow. Their forms, customs, and embeddedness limited the sorts of topics that could be explored through them. A nostalgia for an artistic scene characterized by that rigidity had to be expressed in prose, a form that allows for constant invention and experimentation. You mentioned, though, that Tagore didn’t conceive of the formal liberty offered by prose as offering all the possibilities a textual artist would need. For him, meter, not prose, was the medium to process Upanishadic wisdom and express those emotions. It’s telling, perhaps, that he has Sandip say: “We, with the clubs of our prose, are the iconoclasts of meter” (57). So far we’ve seen Tagore and Premchand use prose more for the purpose of political satire and commentary, while Mirza Ruswa uses it more to portray life lived in a place and time.
+          <p class="indent">
+              One interesting insight we reached in class last week was about Sadaat Hasan Manto’s various ways of expressing how the demarcation of India and Pakistan condemns all potential liminal space between the two. In “Toba Tek Singh,” the first effort to do this comes from one of the people held at the asylum. After climbing up a tree and refusing to come down, he declares: “I want to live neither in Pakistan nor in Hindustan — I will live on this tree” (15). He attempts to escape from systems of sovereignty by looking to the nonhuman: how could a plant be subject to such human constructions? Of course, what he is doing is nonsensical. Sadaat Hasan Manto points to the inevitability of the categories of nation: anyone who attempts to carve out a space outside of those categories is simply talking nonsense. Whatever liminal space there may be outside of these categories is condemned to insanity.
           </p>
-      </div>
+          <p class="indent">
+              At the end of the same story, Bishan Singh finds himself in the no man’s land between the two fences that separate Pakistan and India. Throughout the story, Bishan Singh was characterized as never sitting or lying down. He is perpetually standing. But when he finds himself in this liminal space, “the man who had stood on his legs day and night for fifteen years now lay on the ground, prostrate” (19). His way of being in the world dissolves when he is in the liminal space between India and Pakistan. Though he was insane, there was an order and a logic to his insanity. Once he is in between the two nations, even that order and logic breaks down.
+          </p>
+          <p class="indent" style="margin-bottom: 100px">
+              Just as no tree could be allowed in between India and Pakistan, neither could the dog in “Tetwal Dog.” Completely uncomprehending of the respective identities that the men in either trench construct for him, the dog simply wags his tail and accepts the food given to him. But by the simple fact of going about life, he coincidentally ends up in a situation where his identity is contested: is he Chappar Jhun-Jhun, the Indian dog? Or is he Sappar Sun-Sun, the Pakistani dog? His contested identity leads the men to force him into the no man’s land between the trenches, where he is the subject of violence. In this case, an in-between existence is briefly produced, but that existence cannot be tolerated, and must be met with violence. The men shoot and kill the dog. There can be no in-between.
+          </p>
   </html>
