--- a/washington-heights-dining-table/south_asian_lit/18/index.html
+++ b/washington-heights-dining-table/south_asian_lit/18/index.html
@@ -131,11 +131,11 @@
           }
           .footnotes {
               margin-top: 40px;
-              border-top: 2px solid #AE3179;
+              border-top: 2px solid #486a3f;
               padding-top: 10px;
               font-family: 'Garamond', serif;
               width: 720px;
-              color: #AE3179;
+              color: #486a3f;
           }
           .footnote {
               font-size: 18px;
@@ -146,26 +146,28 @@
 
           .footnote a {
               text-decoration: none;
-              color: #84D6DD;
+              color: #531639;
           }
           .footnote a:hover {
               text-decoration: underline;
               color: #E7EFC1;
-              text-shadow: 1.5px 1.5px #84D6DD;
+              text-shadow: 1.5px 1.5px #486a3f;
           }
     </style>
   </head>
   <body>
       <div class="heading-text">
-          <h1>at a dining table: 2024-2026</h1>
+          <h1>at a dining table: fall 2024 & spring 2025</h1>
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <h1>Thinking about some relationships with prose as a form mentioned in class</h1>
+        <h1>A note on translation: thinking about prosody</h1>
       </div>
       <div class="essay">
-          <p class="indent", style="margin-bottom: 100px">
-              I’m writing this after I wrote about Premchand’s short and Satyajit Ray’s adaptation of it, which I think embody interesting relationships with prose (see post for February 12). There, prose is antithetical to the structured literary traditions (and associated detachment and decadence) of old. The <i>ghazal</i> is positioned as one such form. This is not at all the case in Mirza Ruswa’s <i>Umrao Jan Ada</i>. Though it is, of course, written in prose, it clearly holds <i>ghazals</i> in high regard. This represents a version of the significance prose that Anand mentioned in class. For Mirza Ruswa Sahib, its use is born out of a nostalgia for and a desire to portray the past of Lucknowi culture. Ironically, the old forms that were part of the vibrant expressive tradition in Lucknow were not equipped to paint a picture of that Lucknow. Their forms, customs, and embeddedness limited the sorts of topics that could be explored through them. A nostalgia for an artistic scene characterized by that rigidity had to be expressed in prose, a form that allows for constant invention and experimentation. You mentioned, though, that Tagore didn’t conceive of the formal liberty offered by prose as offering all the possibilities a textual artist would need. For him, meter, not prose, was the medium to process Upanishadic wisdom and express those emotions. It’s telling, perhaps, that he has Sandip say: “We, with the clubs of our prose, are the iconoclasts of meter” (57). So far we’ve seen Tagore and Premchand use prose more for the purpose of political satire and commentary, while Mirza Ruswa uses it more to portray life lived in a place and time.
+          <p class="indent">
+              You made an interesting point in class, which was that despite the fact that Indo-Aryan languages and Dravidian languages are more genetically distant from one another than Indo-Aryan languages to Indo-European languages, it is easier to translate texts between the two. Of course, this makes a lot of sense: these two language families have been in contact with each other for centuries on the subcontinent. They have co-evolved under the patronage of states; they have an overlapping literary canon; they have co-existed in vernacular settings. They share a cultural reservoir of meaning. At the same time, I was hesitant about the extent to which this could be absolutely true: surely the fact that the languages are so unrelated has some consequences, particularly when it comes to prosody and rhythm. Don’t these features follow more from the morphosyntactic elements of the language? (I’ll come back to this point in a moment.) This prompted an interesting thought, which I'm now questioning: that when it comes to poetry and metered forms of literature, the syntactic structure of the language holds more weight. The very fact that rhythm — a human universal — does more work in these forms makes them <i>less</i> universal, as that rhythm is a product of the linguistic instruments that create it. That’s an interesting way to think about the advent of prose. As a form less constituted by its prosodic timing, it's less of a product of its languages’ structure and more translatable.
           </p>
-      </div>
+          <p class="indent" style="margin-bottom: 100px">
+              This theory might night hold, though. You mentioned in class that Proto-Indo-European languages seemed to have flexible word order, but when they arrived in India, the rigidity of Dravidian languages’ Subject-Object-Verb word order diffused to the Indo-Aryan languages. Not only did cultural features diffuse; but syntactic ones did too. But still, some of the underlying syntactic structures of Indo-Aryan languages are more Indo-European (like auxiliary placement and relative clause formation). Still, when it comes to the ability to translate prosodic timing, it doesn’t seem to lie in morphosyntactic features. It’s impossible to translate ghazal’s prosody into an Indo-European language, but the centuries of literary interface between Urdu and Dravidian languages means that there are at least partial meter analogues between the two. So, it may be the case that morphosyntactic features have some importance in prosodic timing. But thinking about the example of translating a ghazal’s prosody, it seems like that too is something that comes from cultural meaning, rather than inherent linguistic structure. Just as linguistic structure seems to be a vehicle of meaning, not constitutive of it, it is a vehicle of rhythm, not constitutive of it. Cultural context constitutes them both.
+          </p>
   </html>
