--- a/washington-heights-dining-table/south_asian_lit/19/index.html
+++ b/washington-heights-dining-table/south_asian_lit/19/index.html
@@ -131,11 +131,11 @@
           }
           .footnotes {
               margin-top: 40px;
-              border-top: 2px solid #AE3179;
+              border-top: 2px solid #486a3f;
               padding-top: 10px;
               font-family: 'Garamond', serif;
               width: 720px;
-              color: #AE3179;
+              color: #486a3f;
           }
           .footnote {
               font-size: 18px;
@@ -146,12 +146,12 @@
 
           .footnote a {
               text-decoration: none;
-              color: #84D6DD;
+              color: #531639;
           }
           .footnote a:hover {
               text-decoration: underline;
               color: #E7EFC1;
-              text-shadow: 1.5px 1.5px #84D6DD;
+              text-shadow: 1.5px 1.5px #486a3f;
           }
     </style>
   </head>
@@ -161,11 +161,11 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <h1>Thinking about some relationships with prose as a form mentioned in class</h1>
+        <p style="margin-bottom: 20px; text-align: center"> <i>WARNING: This reckons with a portrayal of an adult recalling being sexually assaulted as a child</i></p>
+        <h1>Re-reading <i>Lihaaf's</i> Narration</h1>
       </div>
       <div class="essay">
-          <p class="indent", style="margin-bottom: 100px">
-              I’m writing this after I wrote about Premchand’s short and Satyajit Ray’s adaptation of it, which I think embody interesting relationships with prose (see post for February 12). There, prose is antithetical to the structured literary traditions (and associated detachment and decadence) of old. The <i>ghazal</i> is positioned as one such form. This is not at all the case in Mirza Ruswa’s <i>Umrao Jan Ada</i>. Though it is, of course, written in prose, it clearly holds <i>ghazals</i> in high regard. This represents a version of the significance prose that Anand mentioned in class. For Mirza Ruswa Sahib, its use is born out of a nostalgia for and a desire to portray the past of Lucknowi culture. Ironically, the old forms that were part of the vibrant expressive tradition in Lucknow were not equipped to paint a picture of that Lucknow. Their forms, customs, and embeddedness limited the sorts of topics that could be explored through them. A nostalgia for an artistic scene characterized by that rigidity had to be expressed in prose, a form that allows for constant invention and experimentation. You mentioned, though, that Tagore didn’t conceive of the formal liberty offered by prose as offering all the possibilities a textual artist would need. For him, meter, not prose, was the medium to process Upanishadic wisdom and express those emotions. It’s telling, perhaps, that he has Sandip say: “We, with the clubs of our prose, are the iconoclasts of meter” (57). So far we’ve seen Tagore and Premchand use prose more for the purpose of political satire and commentary, while Mirza Ruswa uses it more to portray life lived in a place and time.
+          <p class="indent">
+              In <i>Lihaaf</i>, the quality of the prose is very distinct compared to the rest of Ismat Chughtai’s work. When I first read it, the significance of the child narrator’s presence landed differently than how I’m thinking about it now. At the time, I had thought of it as a decision on Chughtai’s part to process adult sexuality through the eyes of a child. This way, the reader’s existing system of intelligibility when it came to sex would be completely suspended, and they would be put in the child's unknowing experience. The child narrator is not the only one, though: there is also a quasi-omniscient narrator and (more importantly for my purposes here) the child narrator's adult self. When the child is narrating, she is really being rendered through the adult narrators’ memory: there is no demarcating the two. I would go as far as to say there is no child narrator, just an adult narrator rendering her thoughts as a child. As a result, she often does so in ways that must be inaccurate. For example, she notes Begum Jan’s “carefully plucked eyebrows” (10) — a child might notice their shape, but wouldn’t appreciate the care that went into them. Because of this, I agree with Tahra: in class, she had said that the perspective of the child is a manifestation of the adult narrator’s own repression. The 'child narrator' doesn't exist as an entity in itself in the story. As an adult, the narrator processes the sexual experience she was unknowingly thrust into as a child <i>in a child’s terms</i>. She is unable to bring that into a system of adult intelligibility. As an adult, she has the ability to see that an adult used her for sexual pleasure, but she cannot confront this explicit terms: she can only reproduce the experience of the unknown fear she had as a child. This, I think, is why the story reads as it does.
           </p>
-      </div>
   </html>
