--- a/washington-heights-dining-table/south_asian_lit/21/index.html
+++ b/washington-heights-dining-table/south_asian_lit/21/index.html
@@ -131,11 +131,11 @@
           }
           .footnotes {
               margin-top: 40px;
-              border-top: 2px solid #AE3179;
+              border-top: 2px solid #486a3f;
               padding-top: 10px;
               font-family: 'Garamond', serif;
               width: 720px;
-              color: #AE3179;
+              color: #486a3f;
           }
           .footnote {
               font-size: 18px;
@@ -146,12 +146,12 @@
 
           .footnote a {
               text-decoration: none;
-              color: #84D6DD;
+              color: #531639;
           }
           .footnote a:hover {
               text-decoration: underline;
               color: #E7EFC1;
-              text-shadow: 1.5px 1.5px #84D6DD;
+              text-shadow: 1.5px 1.5px #486a3f;
           }
     </style>
   </head>
@@ -161,11 +161,16 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <h1>Thinking about some relationships with prose as a form mentioned in class</h1>
+        <h1>Begum Rokeya Sakhawat Hossain’s invitation to imagine</h1>
       </div>
       <div class="essay">
-          <p class="indent", style="margin-bottom: 100px">
-              I’m writing this after I wrote about Premchand’s short and Satyajit Ray’s adaptation of it, which I think embody interesting relationships with prose (see post for February 12). There, prose is antithetical to the structured literary traditions (and associated detachment and decadence) of old. The <i>ghazal</i> is positioned as one such form. This is not at all the case in Mirza Ruswa’s <i>Umrao Jan Ada</i>. Though it is, of course, written in prose, it clearly holds <i>ghazals</i> in high regard. This represents a version of the significance prose that Anand mentioned in class. For Mirza Ruswa Sahib, its use is born out of a nostalgia for and a desire to portray the past of Lucknowi culture. Ironically, the old forms that were part of the vibrant expressive tradition in Lucknow were not equipped to paint a picture of that Lucknow. Their forms, customs, and embeddedness limited the sorts of topics that could be explored through them. A nostalgia for an artistic scene characterized by that rigidity had to be expressed in prose, a form that allows for constant invention and experimentation. You mentioned, though, that Tagore didn’t conceive of the formal liberty offered by prose as offering all the possibilities a textual artist would need. For him, meter, not prose, was the medium to process Upanishadic wisdom and express those emotions. It’s telling, perhaps, that he has Sandip say: “We, with the clubs of our prose, are the iconoclasts of meter” (57). So far we’ve seen Tagore and Premchand use prose more for the purpose of political satire and commentary, while Mirza Ruswa uses it more to portray life lived in a place and time.
+          <p class="indent">
+              In Sultana’s Dream, Begum Rokeya Sakhawat Hossain’s feminist utopia is not a simple utopia: it is a parody of one, and I will argue, an invitation to invent another. It does not imagine an ideal; it plays with the idea of one. As a result, it is playfully reproductive of masculine presents and futures: the society has purdah, but the men are the ones locked up; it is a techno-utopia. They have no need for fire or weaponry — they harness the power of the sun; they have an abundance of water which they harness from the atmosphere. They live in such abundance that they subsist mainly on fruits, which are grown in gardens in which “every creeper, every tomato plant was itself an ornament.” The natural world is rewired for human pleasure, functionally and aesthetically.
           </p>
-      </div>
+          <p class="indent">
+              Begum Rokeya's parody of a utopia closely resembles non-satirical post-scarcity fantasies of her time and since. Whereas her reproduction of the present inverts it, her reproduction of imagined futures does not. By gender-bending present institutions of gendered subjugation, Begum Rokeya more than shows their absurdity. But by reproducing conventional utopian imaginaries, she demonstrates that they, too, are absurd. She demonstrates the gendered work that they do. A world in which men are locked in the zenanas and humans harness the power of nature to satisfy their every need is a world in which women live out the masculine dream of subjugating all else to their ends. They subjugate the opposite gender and the natural world. In rendering this world, Begum Rokeya shows how it is not only tradition that acts as an instrument of women’s subjugation. Imagined futures do, too. An imagined future can serve as a fictional end towards which a society can be organized. If that end is absolute extractive power over the natural world, Begum Rokeya points out, that is no utopia: half the population will still be locked up in the zenana. By gender-bending the post-scarcity utopia, Begum Rokeya confronts her readers with the question: who is post-scarcity for? By parodying (i.e. demonstrating) the patriarchy-enforcing work that existing utopian imaginaries do, she invites her readers to invent new and liberating utopian imaginaries.
+          </p>
+          <p class="indent" style="margin-bottom: 100px">
+              <i>Sultana’s</i> Dream is not a utopia; it is a parody of a utopia that invites new utopias.
+          </p>
   </html>
