--- a/washington-heights-dining-table/south_asian_lit/23/index.html
+++ b/washington-heights-dining-table/south_asian_lit/23/index.html
@@ -131,11 +131,11 @@
           }
           .footnotes {
               margin-top: 40px;
-              border-top: 2px solid #AE3179;
+              border-top: 2px solid #486a3f;
               padding-top: 10px;
               font-family: 'Garamond', serif;
               width: 720px;
-              color: #AE3179;
+              color: #486a3f;
           }
           .footnote {
               font-size: 18px;
@@ -146,12 +146,12 @@
 
           .footnote a {
               text-decoration: none;
-              color: #84D6DD;
+              color: #531639;
           }
           .footnote a:hover {
               text-decoration: underline;
               color: #E7EFC1;
-              text-shadow: 1.5px 1.5px #84D6DD;
+              text-shadow: 1.5px 1.5px #486a3f;
           }
     </style>
   </head>
@@ -161,11 +161,19 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <h1>Thinking about some relationships with prose as a form mentioned in class</h1>
+        <h1>Subjectivity and Archetype in Vijay Dan Detha’s <i>The Dilemma</i></h1>
       </div>
       <div class="essay">
-          <p class="indent", style="margin-bottom: 100px">
-              I’m writing this after I wrote about Premchand’s short and Satyajit Ray’s adaptation of it, which I think embody interesting relationships with prose (see post for February 12). There, prose is antithetical to the structured literary traditions (and associated detachment and decadence) of old. The <i>ghazal</i> is positioned as one such form. This is not at all the case in Mirza Ruswa’s <i>Umrao Jan Ada</i>. Though it is, of course, written in prose, it clearly holds <i>ghazals</i> in high regard. This represents a version of the significance prose that Anand mentioned in class. For Mirza Ruswa Sahib, its use is born out of a nostalgia for and a desire to portray the past of Lucknowi culture. Ironically, the old forms that were part of the vibrant expressive tradition in Lucknow were not equipped to paint a picture of that Lucknow. Their forms, customs, and embeddedness limited the sorts of topics that could be explored through them. A nostalgia for an artistic scene characterized by that rigidity had to be expressed in prose, a form that allows for constant invention and experimentation. You mentioned, though, that Tagore didn’t conceive of the formal liberty offered by prose as offering all the possibilities a textual artist would need. For him, meter, not prose, was the medium to process Upanishadic wisdom and express those emotions. It’s telling, perhaps, that he has Sandip say: “We, with the clubs of our prose, are the iconoclasts of meter” (57). So far we’ve seen Tagore and Premchand use prose more for the purpose of political satire and commentary, while Mirza Ruswa uses it more to portray life lived in a place and time.
+          <p class="indent">
+              I wanted to touch on an exchange between Anand, Samriddhi and me in conversation with your reading of Vijay Dan Detha’s <i>The Dilemma</i>. Anand had criticized the story for not portraying the wife’s subjectivity with much nuance, which made the story take on a more masculine perspective. Samriddhi countered this by pointing out that the story does not understand itself in terms of subjectivities, but rather in terms of archetypes. It is a contemporary re-imagination of a folkloric form. It is a form that predates prose, where there is a need for interiority and subjective psychological structures that are individuated from the social context. Vijay Dan Detha is more concerned with archetypes and the morals they can be used to impart rather than subjectivities. In class, I backed up Anand on his point: the story may draw from folk imaginaries, but it still seeks to portray (some of) its characters’ subjectivities. The characters don’t just narrate their values, but the stories’ narrator imposes those values on its portrayal of the world at large. The reader is presented with their subjective interpretation of the world. I’ll complicate this in a moment, but the characters feel less like devices a storyteller can move to their ends and more like an artistic rendering of a life. In my reading of their respective readings of nature that I offered last week, I definitely treat them as such.
           </p>
-      </div>
+          <p class="indent">
+              But your perspective on the ghost existing as an incarnation of the bride’s dream of love, care, and intimacy (both physically and emotionally) complicates this. In that reading, the ghost is more of an archetype. In that case, the ghost’s subjectivity is not a subjectivity <i>per se</i>. It is a fantasy of a subjectivity as produced by an unsatisfied and unappreciated woman. The ghost seeing her beauty everywhere in nature is not a portrayal of the subjective experience of infatuation, it is a portrayal of what Vijay Dan Datha takes to be a woman’s fantasy for a man’s love. At the same time, her actual subjectivity is never really portrayed — in this reading, only a supernatural manifestation of it is.
+          </p>
+          <p class="indent">
+              I have trouble with whether or not that reading is damning of the story. What should we make of the fact that the ghost's love is so groundlessly based on a glimpse of a first impression rather than any actual care for who the bride is as a human being? Does Vijay Dan Detha mean to show how the best that a woman in her context can imagine is unwavering amorous infatuation? Or does the story just have a narrow conception of love?
+          </p>
+          <p class="indent", style="margin-bottom: 100px">
+              Still, I think the whole discussion of the folk archetype versus contemporary subject mixture in this story brings out what’s so interesting about his work here. The fact that one could read the story in terms of either one is interesting in that it puts our relationship with both into question. What does it mean that a contemporary folk-like story rests so heavily on portrayal of subjectivities? Can we understand these ‘subjectivities’ as something other than individuated <i>ends in themselves</i>? Is their subject-like quality just Vijay Dan Detha integrating a contemporary device into the structure of a folktale? In other words, is this a reclamation of the folk mode with contemporary tools? Or does it represent the centrality of the subject in contemporary human creativity, and our inability to work outside of it?
+          </p>
   </html>
