--- a/washington-heights-dining-table/south_asian_lit/24/index.html
+++ b/washington-heights-dining-table/south_asian_lit/24/index.html
@@ -131,11 +131,11 @@
           }
           .footnotes {
               margin-top: 40px;
-              border-top: 2px solid #AE3179;
+              border-top: 2px solid #486a3f;
               padding-top: 10px;
               font-family: 'Garamond', serif;
               width: 720px;
-              color: #AE3179;
+              color: #486a3f;
           }
           .footnote {
               font-size: 18px;
@@ -146,12 +146,12 @@
 
           .footnote a {
               text-decoration: none;
-              color: #84D6DD;
+              color: #531639;
           }
           .footnote a:hover {
               text-decoration: underline;
               color: #E7EFC1;
-              text-shadow: 1.5px 1.5px #84D6DD;
+              text-shadow: 1.5px 1.5px #486a3f;
           }
     </style>
   </head>
@@ -161,11 +161,28 @@
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <h1>Thinking about some relationships with prose as a form mentioned in class</h1>
+        <h1>Female Divinity out of the male gaze? A strange moment in K.P. Ramanunni’s <i>What the Sufi Said</i></h1>
       </div>
       <div class="essay">
-          <p class="indent", style="margin-bottom: 100px">
-              I’m writing this after I wrote about Premchand’s short and Satyajit Ray’s adaptation of it, which I think embody interesting relationships with prose (see post for February 12). There, prose is antithetical to the structured literary traditions (and associated detachment and decadence) of old. The <i>ghazal</i> is positioned as one such form. This is not at all the case in Mirza Ruswa’s <i>Umrao Jan Ada</i>. Though it is, of course, written in prose, it clearly holds <i>ghazals</i> in high regard. This represents a version of the significance prose that Anand mentioned in class. For Mirza Ruswa Sahib, its use is born out of a nostalgia for and a desire to portray the past of Lucknowi culture. Ironically, the old forms that were part of the vibrant expressive tradition in Lucknow were not equipped to paint a picture of that Lucknow. Their forms, customs, and embeddedness limited the sorts of topics that could be explored through them. A nostalgia for an artistic scene characterized by that rigidity had to be expressed in prose, a form that allows for constant invention and experimentation. You mentioned, though, that Tagore didn’t conceive of the formal liberty offered by prose as offering all the possibilities a textual artist would need. For him, meter, not prose, was the medium to process Upanishadic wisdom and express those emotions. It’s telling, perhaps, that he has Sandip say: “We, with the clubs of our prose, are the iconoclasts of meter” (57). So far we’ve seen Tagore and Premchand use prose more for the purpose of political satire and commentary, while Mirza Ruswa uses it more to portray life lived in a place and time.
+          <p class="indent">
+              Sorry I am running out of time, so this will be a shorter response.
           </p>
-      </div>
+          <p class="indent">
+              There’s a passage in K.P. Ramanunni’s <i>What the Sufi Said</i> that I found, like many other parts of the book, beautifully unsettling. It’s when Karthy’s husband-to-be, Pithan Mamootty, first lays his eyes on her: it makes her feel “disrobed” but she enjoys it on a visceral level, becoming “engrossed in the pulsating awareness of her body” (69). She feels an unmatched “infatuation with herself” (70), to the point that (now alone in her room), she tears all of her clothes off. Seeing her nude body in the mirror:
+          </p>
+          <p class="blockquote">
+              [S]he saw each part of her body undergoing a kaleidoscopic process of concretisation, dissolution, and resurrection. Each part acquired an independent individuality and then dissolved in a cosmic metamorphosis — ever evolving and returning to primeval permanence.
+          </p>
+          <p class="blockquote">
+              Like butterflies, the lips searched for wild forests. The rosy cheeks formed themselves into the flowers of the spring. The breasts departed seeking the peaks of the sacred mountains to flood the rivers and to nurture the land and its people. She reached into the heart of nature itself, there to conceive and contain the universe in her womb. Her body transcended the boundaries of countries and continents. It was all hers.
+          </p>
+          <p class="blockquote">
+              Oh! The intoxication of total ownership!
+          </p>
+          <p>
+              Why is it that her experience of divinity is prompted by the lust of the male gaze? Her experience is deeply gendered and deeply bodily: the parts of her body associated with femininity become parts of the universe; she comes to contain nature with her womb. Her body is transmogrified in a way made out to be beautiful, yet it is torn apart and put inside itself.
+          </p>
+          <p class="indent", style="margin-bottom: 100px">
+              For her, this gaze feels new in comparison to those of removed reverence she gets from others. To her, the gaze she is used to from others renders her invisible and isolated, it drains her of the “mirth” of an ordinary mortal (66). Yet Pithan's gaze seems to have the very same effect: it commits a violence to her mortality by elevating her to invisible yet universal stature. In this case, though, she truly experiences and therefore enjoys that invisible yet universal stature. The gaze that makes her experience her own divinity is not one of reverence, but of male desire. What should we make of the fact that this is the inciting moment that leads her to leave the tharavad? That this moment leads the two to become husband and wife? That her subjective experience of her divinity is initially strongest when she is desired by a man?
+         </p>
   </html>
