--- a/washington-heights-dining-table/south_asian_lit/9/index.html
+++ b/washington-heights-dining-table/south_asian_lit/9/index.html
@@ -8,15 +8,15 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('/mamaroneck-2023/press start.ttf') format('truetype');
+            src: url('/fonts/press start.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
+            src: url('/fonts/pixelon.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Garamond';
-            src: url('garamond.ttf') format('truetype');
+            src: url('/fonts/garamond.ttf') format('truetype');
         }
         body {
             display: flex;
@@ -157,11 +157,11 @@
   </head>
   <body>
       <div class="heading-text">
-          <h1>at a dining table: fall 2024 & spring 2025</h1>
+          <h1>at a dining table: 2024-2026</h1>
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
-        <p style="margin-bottom: 20px;"> <i>This is about Yashpal's short stories "Enlightenment" and "The Mire of Sin." At this point in the class, these had been my favorite readings. I would highly recommend them. Both Yashpal and Premchand have a really nice range of expression with their prose, but at least in the texts I encountered, Yashpal doesn't run into the issue of reproducing the systems he critiques. Both are still some of my favorite realist authors I've encountered in any geography.</i></p>
+        <p style="margin-bottom: 20px"> <i>This is about Yashpal's short stories "Enlightenment" and "The Mire of Sin." At this point in the class, these had been my favorite readings. I would highly recommend them. Both Yashpal and Premchand have a really nice range of expression with their prose, but at least in the texts I encountered, Yashpal doesn't run into the issue of reproducing the systems he critiques. Both are still some of my favorite realist authors I've encountered in any geography.</i></p>
         <h1>Yashpal against asceticism and nature’s <i>consummation</i></h1>
       </div>
       <div class="essay">
