--- a/washington-heights-dining-table/south_asian_lit/2/index.html
+++ b/washington-heights-dining-table/south_asian_lit/2/index.html
@@ -8,15 +8,19 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('/mamaroneck-2023/press start.ttf') format('truetype');
+            src: url('/fonts/press start.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
+            src: url('/fonts/pixelon.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Garamond';
-            src: url('garamond.ttf') format('truetype');
+            src: url('/fonts/garamond.ttf') format('truetype');
+        }
+        @font-face {
+            font-family: 'Bangla';
+            src: url('/fonts/Alkatra-Regular.ttf') format('truetype');
         }
         body {
             display: flex;
@@ -153,23 +157,27 @@
               color: #E7EFC1;
               text-shadow: 1.5px 1.5px #84D6DD;
           }
+
+          .Bangla {
+              font-family: 'Bangla', serif;
+          }
     </style>
   </head>
   <body>
       <div class="heading-text">
-          <h1>at a dining table: fall 2024 & spring 2025</h1>
+          <h1>at a dining table: 2024-2026</h1>
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
-      <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
+      <div class="essay" style="margin-bottom: 20px; margin-top: 40px">
         <p style="margin-bottom: 20px; text-align: center"><i> This was written in response to an in-seminar conversation about Tagore's <u>The Home and the World</u></i></p>
-        <h1><span class="/Alkatra-SemiBold.ttf">পরদেশী/স্বদেশী</span></h1>
+        <h1><span class="Bangla">পরদেশী/স্বদেশী</span></h1>
       </div>
       <div class="essay">
           <p class="indent">
-              Someone in class last week was positioning Sandip as an outsider, which you connected to the Bengali concept of the <span class="/Alkatra-SemiBold.ttf">পরদেশী</span> (pordeshi). This was interesting to me, since Sandip, of course, is a supporter of <span class="/Alkatra-SemiBold.ttf">স্বদেশী</span> (swadeshi). Compared to the caricatures he uses to delegitimize the <span class="/Alkatra-SemiBold.ttf">স্বদেশী</span> movement, Tagore makes a more subtle rhetorical choice here. <span class="/Alkatra-SemiBold.ttf">স্বদেশী</span> was a self-sufficiency movement. The British systematically destroyed nascent Indian industries to the end of making India a dependent, raw material-exporting appendage to the British manufacturing economy. Britain reaped benefits from India’s subjugation not just in the raw materials it received but in the Indian market it was able to sell back to. <span class="/Alkatra-SemiBold.ttf">স্বদেশী</span> — meaning “of one’s own country” — was a response to this foreign colonial extraction. It was a politics that looked to disrupt the colonial economy through boycott, and strengthen a local economy instead. It was predicated on its opposition to the foreigner (the <span class="/Alkatra-SemiBold.ttf">পরদেশী</span>) and its desire to strengthen and restore pride in <span class="/Alkatra-SemiBold.ttf">দেশ</span> (the homeland, the country).
+              Someone in class last week was positioning Sandip as an outsider, which you connected to the Bengali concept of the <span class="Bangla">পরদেশী</span> (pordeshi). This was interesting to me, since Sandip, of course, is a supporter of <span class="Bangla">স্বদেশী</span> (swadeshi). Compared to the caricatures he uses to delegitimize the <span class="Bangla">স্বদেশী</span> movement, Tagore makes a more subtle rhetorical choice here. <span class="Bangla">স্বদেশী</span> was a self-sufficiency movement. The British systematically destroyed nascent Indian industries to the end of making India a dependent, raw material-exporting appendage to the British manufacturing economy. Britain reaped benefits from India’s subjugation not just in the raw materials it received but in the Indian market it was able to sell back to. <span class="Bangla">স্বদেশী</span> — meaning “of one’s own country” — was a response to this foreign colonial extraction. It was a politics that looked to disrupt the colonial economy through boycott, and strengthen a local economy instead. It was predicated on its opposition to the foreigner (the <span class="Bangla">পরদেশী</span>) and its desire to strengthen and restore pride in <span class="Bangla">দেশ</span> (the homeland, the country).
           </p>
           <p class="indent", style="margin-bottom: 150px">
-              But when Tagore introduces Sandip, he positions him as a <span class="/Alkatra-SemiBold.ttf">পরদেশী</span>. In the first chapter, Bimala’s frame of mind is entirely within the home: “I had so much in this cage of mine that there was not room for it in the universe” (24). Sandip’s introduction at the beginning of Chapter Two is the first moment of the book that is truly outside of the home. He is out in the world, a space foreign to Bimala’s cage. Later, in a debate between Nikhil and Sandip, Tagore has Nikhil accuse Sandip of the following: “in Europe people look at everything from the viewpoint of science…Man is infinitely more than the natural science of himself…You want to find the truth of man from your science teachers and not from your own inner being” (61). Sandip, the preacher of <span class="/Alkatra-SemiBold.ttf">স্বদেশী</span>, is the student of the <span class="/Alkatra-SemiBold.ttf">পরদেশী</span>; he looks at the world like a <span class="/Alkatra-SemiBold.ttf">পরদেশী</span>. It is Nikhil whose views come from his own দেশ. Later on, Tagore has Sandip even goes as far as saying “I want the western military style to prevail, not the Indian” (81). It was interesting to see Tagore compete for the some markers of legitimacy as the <span class="/Alkatra-SemiBold.ttf">স্বদেশী</span> movement. Instead of articulating a perspective that is explicitly conciliatory with foreign influence and willing to learn from foreign epistemologies — something one might expect from his educational endeavors in Shantiniketan — he attempts to co-opt a sense of <span class="/Alkatra-SemiBold.ttf">দেশী</span> pride and contempt for the <span class="/Alkatra-SemiBold.ttf">পরদেশী</span> to oppose <span class="/Alkatra-SemiBold.ttf">স্বদেশী</span>.
+              But when Tagore introduces Sandip, he positions him as a <span class="Bangla">পরদেশী</span>. In the first chapter, Bimala’s frame of mind is entirely within the home: “I had so much in this cage of mine that there was not room for it in the universe” (24). Sandip’s introduction at the beginning of Chapter Two is the first moment of the book that is truly outside of the home. He is out in the world, a space foreign to Bimala’s cage. Later, in a debate between Nikhil and Sandip, Tagore has Nikhil accuse Sandip of the following: “in Europe people look at everything from the viewpoint of science…Man is infinitely more than the natural science of himself…You want to find the truth of man from your science teachers and not from your own inner being” (61). Sandip, the preacher of <span class="Bangla">স্বদেশী</span>, is the student of the <span class="Bangla">পরদেশী</span>; he looks at the world like a <span class="Bangla">পরদেশী</span>. It is Nikhil whose views come from his own <span class="Bangla">দেশ</span>. Later on, Tagore has Sandip even goes as far as saying “I want the western military style to prevail, not the Indian” (81). It was interesting to see Tagore compete for the some markers of legitimacy as the <span class="Bangla">স্বদেশী</span> movement. Instead of articulating a perspective that is explicitly conciliatory with foreign influence and willing to learn from foreign epistemologies — something one might expect from his educational endeavors in Shantiniketan — he attempts to co-opt a sense of <span class="Bangla">দেশী</span> pride and contempt for the <span class="Bangla">পরদেশী</span> to oppose <span class="Bangla">স্বদেশী</span>.
           </p>
         </div>
       </html>
