--- a/washington-heights-dining-table/south_asian_lit/6/index.html
+++ b/washington-heights-dining-table/south_asian_lit/6/index.html
@@ -8,15 +8,15 @@
     <style>
         @font-face {
             font-family: 'Press Start 2P';
-            src: url('/mamaroneck-2023/press start.ttf') format('truetype');
+            src: url('/fonts/press start.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Pixelon';
-            src: url('/mamaroneck-2023/pixelon.ttf') format('truetype');
+            src: url('/fonts/pixelon.ttf') format('truetype');
         }
         @font-face {
             font-family: 'Garamond';
-            src: url('garamond.ttf') format('truetype');
+            src: url('/fonts/garamond.ttf') format('truetype');
         }
         body {
             display: flex;
@@ -157,7 +157,7 @@
   </head>
   <body>
       <div class="heading-text">
-          <h1>at a dining table: fall 2024 & spring 2025</h1>
+          <h1>at a dining table: 2024-2026</h1>
           <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
       </div>
       <div class="essay", style="margin-bottom: 20px; margin-top: 40px">
