--- a/washington-heights-dining-table/mojahedin_khomeini/index.html
+++ b/washington-heights-dining-table/mojahedin_khomeini/index.html
@@ -17,6 +17,7 @@
         @font-face {
             font-family: 'Garamond';
             src: url('/fonts/garamond.ttf') format('truetype');
+            font-style: normal;
         }
         body {
             display: flex;
