--- a/washington-heights-dining-table/mojahedin_khomeini/index.html
+++ b/washington-heights-dining-table/mojahedin_khomeini/index.html
@@ -74,6 +74,7 @@
 
         .essay p {
             font-size: 18px;
+            font-weight: normal;
             color: #AE3179;
             text-align: left;
             margin-top: 0px;
