--- a/washington-heights-dining-table/mojahedin_khomeini/index.html
+++ b/washington-heights-dining-table/mojahedin_khomeini/index.html
@@ -16,7 +16,7 @@
         }
         @font-face {
             font-family: 'Garamond';
-            src: url('/fonts/garamond.ttf') format('truetype');
+            src: url('/fonts/garamond.ttf') format('woff2');
             font-style: normal;
         }
         body {
